# codecrafters-http-server-rust

./: Cargo.toml  README.md  mango_orange_pear_grape
src/: http_context.rs  http_request.rs  http_response.rs  http_server.rs  main.rs  middlewares.rs  some_tests.rs  url_matcher.rs
src/middlewares/: dummy_middleware.rs  encoding_middleware.rs  http_middleware.rs  logging_middleware.rs  middleware.rs  panic_middleware.rs  routing_middleware.rs  static_files_middleware.rs  statistic_middleware.rs
