[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
regex = "1.12.2"
clap = { version = "4.5.55", features = ["derive"] }
flate2 = "1.1.8"
